--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tailwindcss/ui": "^0.1.3",
     "core-js": "^3.6.4",
+    "moment-timezone": "^0.5.28",
     "tailwindcss": "^1.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
