--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.2",
     "core-js": "^3.6.5",
     "moment-timezone": "^0.5.33",
     "vue": "^2.6.11",
